--- a/config.json
+++ b/config.json
@@ -1,8 +1,8 @@
 {
-    "ownerNumber": ["94764497078@s.whatsapp.net","94764497078@s.whatsapp.net"],
-    "ownerName": "SANDARU",
+    "ownerNumber": ["923187899669@s.whatsapp.net","923187899669@s.whatsapp.net"],
+    "ownerName": "Tasmee khan",
     "instagram" : "https://instagram.com/nicetry.zaa._",
-    "botName": "SANDARU MD ",
+    "botName": "KHAN BOT ",
     "footer": "api.zeeoneofc.xyz",
     "sessionName": "session",
     "fotoDonasi": "./qris.jpg",
